--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -174,6 +174,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\Background.jpg" />
     <Content Include="Content\Images\Card Pack.png" />
+    <Content Include="Content\Images\CS_Logo.png" />
     <Content Include="Content\Images\Diamant.png" />
     <Content Include="Content\Images\foo2.png" />
     <Content Include="Content\MyStyle.css" />
