--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -178,6 +178,7 @@
     <Content Include="Content\Images\Button_hp.png" />
     <Content Include="Content\Images\Card Pack.png" />
     <Content Include="Content\Images\CS_Logo.png" />
+    <Content Include="Content\Images\Dark-Background.jpg" />
     <Content Include="Content\Images\Diamant Beutel für Shop.png" />
     <Content Include="Content\Images\Diamant.png" />
     <Content Include="Content\Images\foo2.png" />
