--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -231,6 +231,7 @@
     <Content Include="Views\Home\Shop.cshtml" />
     <Content Include="Views\Home\Impressum.cshtml" />
     <Content Include="Views\Home\AGB.cshtml" />
+    <Content Include="Views\Deck\Deck.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
