--- a/CardGame.Web/bin/CardGame.Web.dll.config
+++ b/CardGame.Web/bin/CardGame.Web.dll.config
@@ -14,9 +14,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
- <connectionStrings>
-    <add name="ClonestoneFSEntities" connectionString="metadata=res://*/Model.CardGameModel.csdl|res://*/Model.CardGameModel.ssdl|res://*/Model.CardGameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=itin21_ClonestoneFS;persist security info=True;user id=sa;password=123user!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+ 
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -75,4 +73,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+  <connectionStrings>
+
+    <add name="CardGame_v2Entities" connectionString="metadata=res://*/Model.CardGameModel.csdl|res://*/Model.CardGameModel.ssdl|res://*/Model.CardGameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=CardGame_v2;persist security info=True;user id=sa;password=123user!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
 </configuration>
