--- a/CardGame.DAL/CardGame.DAL.csproj
+++ b/CardGame.DAL/CardGame.DAL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Logic\CardManager.cs" />
     <Compile Include="Logic\DBInfoManager.cs" />
     <Compile Include="Logic\Helper.cs" />
+    <Compile Include="Logic\ShopManager.cs" />
     <Compile Include="Logic\UserManager.cs" />
     <Compile Include="Model\CardGameModel.Context.cs">
       <AutoGen>True</AutoGen>
