--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -191,10 +191,12 @@
     <Compile Include="Controllers\DeckController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
+    <Compile Include="Controllers\StatisticController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BestsellerModel.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\CardPackModel.cs" />
     <Compile Include="Models\DeckDetailModel.cs" />
@@ -269,16 +271,15 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Home\Impressum.cshtml" />
     <Content Include="Views\Home\AGB.cshtml" />
-    <Content Include="Views\Deck\Deck.cshtml" />
     <Content Include="Views\Shop\ShopIndex.cshtml" />
     <Content Include="Views\User\EditAccount.cshtml" />
-    <Content Include="Views\Deck\DeckBuilder.cshtml" />
     <Content Include="Views\DeckBuilder\Index.cshtml" />
     <Content Include="Views\DeckBuilder\Show.cshtml" />
+    <Content Include="Views\Statistic\Statistic.cshtml" />
+    <Content Include="Views\Statistic\Bestseller.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
