--- a/CardGame.Web/bin/CardGame.Web.dll.config
+++ b/CardGame.Web/bin/CardGame.Web.dll.config
@@ -89,7 +89,7 @@
 
   <connectionStrings>
 
-    <add name="CardGame_v2Entities" connectionString="metadata=res://*/Model.CardGameModel.csdl|res://*/Model.CardGameModel.ssdl|res://*/Model.CardGameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=CardGame_v2;persist security info=True;user id=sa;password=123user!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CardGame_v2Entities" connectionString="metadata=res://*/Model.CardGameModel.csdl|res://*/Model.CardGameModel.ssdl|res://*/Model.CardGameModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC001999F9405B;initial catalog=CardGame_v2;persist security info=True;user id=sa;password=123user!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
 </configuration>
