--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Models\DeckModel.cs" />
     <Compile Include="Models\DeckOverViewModel.cs" />
     <Compile Include="Models\DiamantenModel.cs" />
+    <Compile Include="Models\EditUserModel.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Register.cs" />
