--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -276,7 +276,7 @@
     <Content Include="Views\DeckBuilder\Index.cshtml" />
     <Content Include="Views\DeckBuilder\Show.cshtml" />
     <Content Include="Views\Statistic\Bestseller.cshtml" />
-    <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
