Mit Bestellstatistic angefangen

--- a/CardGame.DAL/CardGame.DAL.csproj
+++ b/CardGame.DAL/CardGame.DAL.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionManager.cs" />
     <Compile Include="Logic\AuthManager.cs" />
     <Compile Include="Logic\CardManager.cs" />
     <Compile Include="Logic\DBInfoManager.cs" />
