--- a/CardGame.Web/CardGame.Web.csproj
+++ b/CardGame.Web/CardGame.Web.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\CardController.cs" />
     <Compile Include="Controllers\DeckBuilderController.cs" />
     <Compile Include="Controllers\DeckController.cs" />
+    <Compile Include="Controllers\LAPController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Controllers\StatisticController.cs" />
@@ -196,6 +197,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BestellStatisticVM.cs" />
     <Compile Include="Models\BestsellerModel.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\CardPackModel.cs" />
@@ -284,9 +286,11 @@
     <Content Include="Views\Account\ChangePassword.cshtml" />
     <Content Include="Views\Shop\DatenPflege.cshtml" />
     <Content Include="Views\Shop\EditAktivCardpack.cshtml" />
+    <Content Include="Views\LAP\BestellStatistik.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Extension\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
