--- a/CardGame.Web/packages.config
+++ b/CardGame.Web/packages.config
@@ -30,6 +30,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
